# cross-compiler

./: Dockerfile  build.sh  download.sh  httpserver.py  update_status.sh
cpp_template/: myUAModel.cpp
cpp_template/Box_UDisk/: myUAModel.cpp
cpp_template/Box_Wood/: myUAModel.cpp
output/: CMakeLists.txt  main.cpp  myUAModel.h
ssh/: id_rsa  id_rsa.pub
